--- a/css.cabal
+++ b/css.cabal
@@ -20,14 +20,14 @@ executable repl
   hs-source-dirs: src, test, .
   main-is: Main.hs
   default-language: Haskell2010
-  build-depends: base, parsec, mtl, containers, QuickCheck, pretty
+  build-depends: base, parsec, mtl, containers, QuickCheck, pretty, temporary, process
   ghc-options:
 
 executable test
   hs-source-dirs: src, test, .
   main-is: Imports.hs
   default-language: Haskell2010
-  build-depends: base, parsec, mtl, containers, QuickCheck, hspec, pretty
+  build-depends: base, parsec, mtl, containers, QuickCheck, hspec, pretty, temporary, process
   ghc-options:
 
 test-suite spec
@@ -35,5 +35,5 @@ test-suite spec
   hs-source-dirs: src, test
   main-is: Spec.hs
   default-language: Haskell2010
-  build-depends: base, parsec, mtl, containers, QuickCheck, hspec, pretty
+  build-depends: base, parsec, mtl, containers, QuickCheck, hspec, pretty, temporary, process
   ghc-options:
